--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 @import "tailwindcss";
 @import "react-big-calendar/lib/css/react-big-calendar.css";
 @import "react-big-calendar/lib/addons/dragAndDrop/styles.css";
-@import 'react-toastify/dist/ReactToastify.css';
+@import "react-toastify/dist/ReactToastify.css";
